--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.0",
+    "file-saver": "^2.0.5",
     "firebase": "^10.14.1",
     "hover.css": "^2.3.2",
     "openai": "^4.73.1",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
@@ -33,6 +35,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.3",
     "sass": "^1.79.5",
     "simplebar-react": "^3.2.6",
     "styled-components": "^6.1.13",
@@ -63,5 +66,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/file-saver": "^2.0.7",
+    "@types/papaparse": "^5.3.15"
   }
 }
