--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,17 +14,17 @@ before_script:
 build:
   stage: build
   script:
-    - CI=false npm run build
+    - npm run build
   artifacts:
     paths:
       - build
 
-pages:
+deploy:
   stage: deploy
+  image: node:18
+  before_script:
+    - npm install -g firebase-tools
   script:
-    - mv build public
-  artifacts:
-    paths:
-      - public
+    - firebase deploy --token "$FIREBASE_TOKEN" --only hosting
   only:
     - main
