Füge vor dem Deploy-Step einen simplen Echo ein, um zu testen, ob das Secret da ist:
yaml
Kopieren
Bearbeiten

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,15 @@ jobs:
           name: build
           path: build
 
+      - name: Check Firebase Token
+        run: |
+          if [ -z "${{ secrets.FIREBASE_TOKEN }}" ]; then
+            echo "🔥 FIREBASE_TOKEN is NOT SET!"
+            exit 1
+          else
+            echo "✅ FIREBASE_TOKEN is set"
+          fi     
+
       - name: Deploy to Firebase
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
