--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,62 @@
-name: Build and Deploy
+name: Build, Push & Deploy
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up gcloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ secrets.GCP_PROJECT }}
+          export_default_credentials: true
+
+      - name: Configure Docker for GCR
+        run: |
+          gcloud auth configure-docker --quiet
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push frontend
+
+      - name: Build & push frontend to Docker Hub
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/mansa-frontend:latest
-      - name: Build and push backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/mansa-backend:latest
+
+      - name: Build backend image
+        run: |
+          docker build -t gcr.io/${{ secrets.GCP_PROJECT }}/mansa-backend:latest ./backend
+
+      - name: Push backend to GCR
+        run: |
+          docker push gcr.io/${{ secrets.GCP_PROJECT }}/mansa-backend:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - uses: actions/checkout@v4
-      - name: Start application stack
+      - name: Deploy to Cloud Run
         run: |
-          docker compose pull
-          docker compose up -d
+          gcloud run deploy mansa-backend \
+            --image gcr.io/${{ secrets.GCP_PROJECT }}/mansa-backend:latest \
+            --region europe-west3 \
+            --platform managed \
+            --allow-unauthenticated
