--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,9 @@ jobs:
 
       - name: Build backend image
         run: |
-          docker build -t gcr.io/${{ secrets.GCP_PROJECT }}/mansa-backend:latest ./backend
+          docker build \
+            -t gcr.io/${{ secrets.GCP_PROJECT }}/mansa-backend:latest \
+            ./backend
 
       - name: Push backend to GCR
         run: |
@@ -53,6 +55,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up gcloud SDK
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ${{ secrets.GCP_PROJECT }}
+          export_default_credentials: true
+
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy mansa-backend \
