--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,12 +60,12 @@ jobs:
       - name: Set up gcloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
-          project_id: ${{ secrets.GCP_PROJECT }}
           service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT }}
+          export_default_credentials: true
 
       - name: Configure Docker for GCR
-        run: |
-          gcloud auth configure-docker --quiet
+        run: gcloud auth configure-docker --quiet
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
