--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,19 +57,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Authenticate to GCP
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
       - name: Set up gcloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT }}
-          export_default_credentials: true
-
-      - name: Configure Docker for GCR
-        run: |
-          gcloud auth configure-docker --quiet
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+          project_id:        ${{ secrets.GCP_PROJECT }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -77,11 +73,19 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Configure Docker for GCR & GAR
+        run: |
+          gcloud auth configure-docker gcr.io,us-docker.pkg.dev --quiet
+
       - name: Build backend image
         run: |
           docker build \
             -t gcr.io/${{ secrets.GCP_PROJECT }}/mansa-backend:latest \
             ./backend
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
 
       - name: Push backend to GCR
         run: |
