--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,15 +57,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Authenticate to GCP
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: ${{ secrets.GCP_SA_KEY }}
-
       - name: Set up gcloud SDK
         uses: google-github-actions/setup-gcloud@v1
         with:
-          project_id:        ${{ secrets.GCP_PROJECT }}
+          service_account_key: ${{ secrets.GCP_SA_KEY }}
+          project_id: ${{ secrets.GCP_PROJECT }}
+          export_default_credentials: true
+
+      - name: Configure Docker for GCR
+        run: |
+          gcloud auth configure-docker --quiet
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -73,19 +77,11 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Configure Docker for GCR & GAR
-        run: |
-          gcloud auth configure-docker gcr.io,us-docker.pkg.dev --quiet
-
       - name: Build backend image
         run: |
           docker build \
             -t gcr.io/${{ secrets.GCP_PROJECT }}/mansa-backend:latest \
             ./backend
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
 
       - name: Push backend to GCR
         run: |
@@ -101,8 +97,8 @@ jobs:
           env_vars: |
             SPRING_DATASOURCE_URL="jdbc:mysql://google/mansa?cloudSqlInstance=${{ secrets.GCP_PROJECT }}:europe-west3:mansa-db&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false"
           secrets: |
-            SPRING_DATASOURCE_USERNAME=projects/${{ secrets.GCP_PROJECT }}/secrets/SPRING_DATASOURCE_USERNAME:latest,
-            SPRING_DATASOURCE_PASSWORD=projects/${{ secrets.GCP_PROJECT }}/secrets/SPRING_DATASOURCE_PASSWORD:latest
+            SPRING_DATASOURCE_USERNAME=spring-datasource-username:latest
+            SPRING_DATASOURCE_PASSWORD=spring-datasource-password:latest
           flags: |
             --platform=managed
             --allow-unauthenticated
