Add Spring Cloud GCP MySQL starter and configure Cloud SQL

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,10 @@
 spring.application.name=backend
 
-# Cloud SQL Socket-Factory Konfiguration
-spring.datasource.url=jdbc:mysql://google/${DB_NAME}?cloudSqlInstance=${INSTANCE_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false
-
-# Credentials aus Cloud Run Environment
+spring.cloud.gcp.sql.instance-connection-name=${GCP_PROJECT}:europe-west3:mansa-db
+spring.cloud.gcp.sql.database-name=mansa
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-
-# (optional) Expliziter Treiber
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=${PORT:8080}
 
 # JPA/Hibernate Einstellungen
 spring.jpa.hibernate.ddl-auto=update
