--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -24,11 +24,11 @@
 
   <dependencyManagement>
     <dependencies>
-      <!-- Spring Cloud GCP BOM (passt zu Spring Boot 3.3.x) -->
+      <!-- aktuelles Spring Cloud GCP BOM für Spring Boot 3.3.x -->
       <dependency>
         <groupId>com.google.cloud</groupId>
         <artifactId>spring-cloud-gcp-dependencies</artifactId>
-        <version>5.0.2</version>
+        <version>5.2.0</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -46,23 +46,10 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
-    <!-- MySQL JDBC Driver -->
-    <dependency>
-      <groupId>com.mysql</groupId>
-      <artifactId>mysql-connector-j</artifactId>
-    </dependency>
-
-    <!-- Cloud SQL Socket Factory for MySQL Connector/J 8.x -->
-    <dependency>
-      <groupId>com.google.cloud.sql</groupId>
-      <artifactId>mysql-socket-factory-connector-j-8</artifactId>
-      <version>1.25.1</version>
-    </dependency>
-
+    <!-- Cloud SQL MySQL Starter (enthält Connector und Driver transitiv) -->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
-      <version>1.2.8.RELEASE</version>
     </dependency>
 
     <!-- Testing -->
@@ -80,13 +67,10 @@
         <artifactId>spring-boot-maven-plugin</artifactId>
         <executions>
           <execution>
-            <goals>
-              <goal>repackage</goal>
-            </goals>
+            <goals><goal>repackage</goal></goals>
           </execution>
         </executions>
       </plugin>
     </plugins>
   </build>
-
 </project>
