--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -50,6 +50,7 @@
     <dependency>
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
+      <version>1.2.8.RELEASE</version>
     </dependency>
 
     <!-- Testing -->
