--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,6 +5,7 @@
                              https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
+  <!-- Spring Boot 3.3.x -->
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
@@ -22,6 +23,7 @@
     <java.version>17</java.version>
   </properties>
 
+  <!-- ❶ Spring Cloud GCP BOM 5.2.0  (liefert Cloud‑SQL‑Connector 2.x) -->
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -35,6 +37,7 @@
   </dependencyManagement>
 
   <dependencies>
+    <!-- Standard Spring‑Boot Starter -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
@@ -44,12 +47,13 @@
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
 
+    <!-- ❷ EIN moderner Cloud‑SQL‑Starter  – Version kommt aus BOM -->
     <dependency>
-      <groupId>org.springframework.cloud</groupId>
+      <groupId>com.google.cloud</groupId>
       <artifactId>spring-cloud-gcp-starter-sql-mysql</artifactId>
-      <version>1.2.8.RELEASE</version>
     </dependency>
 
+    <!-- Tests -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
