--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,20 @@
+# application.properties
+
+# service name (optional)
 spring.application.name=backend
 
-spring.cloud.gcp.sql.instance-connection-name=${GCP_PROJECT}:europe-west3:mansa-db
-spring.cloud.gcp.sql.database-name=mansa
+# Cloud SQL (via Spring Cloud GCP starter)
+spring.cloud.gcp.sql.instance-connection-name=${INSTANCE_CONNECTION_NAME}
+spring.cloud.gcp.sql.database-name=${DB_NAME}
+
+# standard Spring DataSource props
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
+# override the port if provided by Cloud Run
 server.port=${PORT:8080}
 
-# JPA/Hibernate Einstellungen
+# JPA / Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
