--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -56,6 +56,11 @@
       <groupId>org.flywaydb</groupId>
       <artifactId>flyway-core</artifactId>
     </dependency>
+    <!-- Add MySQL support for Flyway -->
+    <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-mysql</artifactId>
+    </dependency>
 
     <!-- Lombok for boilerplate reduction -->
     <dependency>
