Set up Flyway for database migrations and disable auto-DDL.
Replaced Hibernate's automatic schema updates with Flyway for better control over database migrations. Enabled Flyway with baseline-on-migrate and added configurations for migration scripts. This improves database versioning and ensures consistency.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,20 +1,16 @@
-# application.properties
+# ? bisherige Einstellungen ?
 
-# service name (optional)
-spring.application.name=backend
+# JPA / Hibernate ? künftig keine automatischen DDL-Änderungen mehr
+spring.jpa.hibernate.ddl-auto=none
 
-# Cloud SQL (via Spring Cloud GCP starter)
-spring.cloud.gcp.sql.instance-connection-name=${INSTANCE_CONNECTION_NAME}
-spring.cloud.gcp.sql.database-name=${DB_NAME}
+# Flyway aktivieren und Baseline erzwingen
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+# (Optional, falls Du nicht mit Version 1 baseline?n willst)
+# spring.flyway.baseline-version=1
+# Ordner mit Deinen Migrationsskripten
+spring.flyway.locations=classpath:db/migration
 
-# standard Spring DataSource props
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-
-# override the port if provided by Cloud Run
-server.port=${PORT:8080}
-
-# JPA / Hibernate settings
-spring.jpa.hibernate.ddl-auto=update
+# SQL-Logging
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
