--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,16 +1,15 @@
-# ? bisherige Einstellungen ?
+spring.application.name=backend
 
-# JPA / Hibernate ? künftig keine automatischen DDL-Änderungen mehr
-spring.jpa.hibernate.ddl-auto=none
+spring.cloud.gcp.sql.instance-connection-name=${GCP_PROJECT}:europe-west3:mansa-db
+spring.cloud.gcp.sql.database-name=mansa
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+server.port=${PORT:8080}
 
-# Flyway aktivieren und Baseline erzwingen
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
-# (Optional, falls Du nicht mit Version 1 baseline?n willst)
-# spring.flyway.baseline-version=1
-# Ordner mit Deinen Migrationsskripten
 spring.flyway.locations=classpath:db/migration
 
-# SQL-Logging
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
