--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,18 @@
-spring.application.name=backend
+# Projekt für Cloud SQL Admin API
+spring.cloud.gcp.project-id=${GCP_PROJECT}
 
+# Cloud SQL Instance
 spring.cloud.gcp.sql.instance-connection-name=${GCP_PROJECT}:europe-west3:mansa-db
 spring.cloud.gcp.sql.database-name=mansa
+
+# Credentials
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-server.port=${PORT:8080}
 
+# Flyway & Hibernate
 spring.flyway.enabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
-
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
