--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.cloud.gcp.project-id=${GCP_PROJECT}
+spring.cloud.gcp.project-id=rare-lambda-460910-k2
 
-spring.cloud.gcp.sql.instance-connection-name=${GCP_PROJECT}:europe-west3:mansa-db
+spring.cloud.gcp.sql.instance-connection-name=rare-lambda-460910-k2:europe-west3:mansa-db
 spring.cloud.gcp.sql.database-name=mansa
 
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
