Update GCP project configuration in application properties
Replaced placeholders for GCP project ID and SQL instance connection name with explicit project values. This ensures proper configuration alignment with the rare-lambda-460910-k2 project. No changes were made to other property settings.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
 
-spring.cloud.gcp.project-id=${GCP_PROJECT}
-spring.cloud.gcp.sql.instance-connection-name=${GCP_PROJECT}:europe-west3:mansa-db
+spring.cloud.gcp.project-id=rare-lambda-460910-k2
+spring.cloud.gcp.sql.instance-connection-name=rare-lambda-460910-k2:europe-west3:mansa-db
 spring.cloud.gcp.sql.database-name=mansa
 
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
@@ -14,3 +14,4 @@ spring.flyway.locations=classpath:db/migration
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
