fix frontend backend url in compose

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -12,4 +12,5 @@ REACT_APP_OPENAI_API_KEY=
 
 # Backend service base URL
 REACT_APP_BACKEND_URL=http://localhost:8080
+# When running via docker compose this value is overridden to http://backend:8080
 
