--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     build: ./frontend
     ports:
       - "3000:80"
+    environment:
+      - REACT_APP_BACKEND_URL=http://backend:8080
     depends_on:
       - backend
   db:
