--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "emoji-picker-react": "^4.12.0",
     "file-saver": "^2.0.5",
     "firebase": "^10.14.1",
+    "framer-motion": "^11.18.2",
     "hover.css": "^2.3.2",
     "openai": "^4.73.1",
     "papaparse": "^5.5.2",
