--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,6 +10,8 @@ server.port=${PORT:8080}
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+spring.flyway.user=${SPRING_DATASOURCE_USERNAME}
+spring.flyway.password=${SPRING_DATASOURCE_PASSWORD}
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=0
 
