--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -50,6 +50,11 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-validation</artifactId>
     </dependency>
+    <!-- Security for AuthenticationPrincipal and JWT -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+    </dependency>
 
     <!-- Flyway for database migrations -->
     <dependency>
