--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,14 @@
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
     "uuid": "^11.0.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-hook-form": "^7.60.0",
+    "@hookform/resolvers": "^5.1.1",
+    "yup": "^1.6.1",
+    "react-i18next": "^15.6.0",
+    "i18next": "^25.3.1",
+    "react-dropzone": "^14.3.8",
+    "react-easy-crop": "^5.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
