--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
+    "@hookform/resolvers": "^5.1.1",
     "@mui/icons-material": "^6.1.3",
     "@mui/material": "^6.1.5",
     "@mui/styled-engine-sc": "^6.1.5",
@@ -27,11 +28,16 @@
     "firebase": "^10.14.1",
     "framer-motion": "^11.18.2",
     "hover.css": "^2.3.2",
+    "i18next": "23.8.3",
     "openai": "^4.73.1",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.8",
+    "react-easy-crop": "^5.4.2",
     "react-firebase-hooks": "^5.1.1",
+    "react-hook-form": "^7.60.0",
+    "react-i18next": "15.5.0",
     "react-number-format": "^5.4.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
@@ -43,13 +49,7 @@
     "typescript": "^4.9.5",
     "uuid": "^11.0.3",
     "web-vitals": "^2.1.4",
-    "react-hook-form": "^7.60.0",
-    "@hookform/resolvers": "^5.1.1",
-    "yup": "^1.6.1",
-    "react-i18next": "^15.6.0",
-    "i18next": "^25.3.1",
-    "react-dropzone": "^14.3.8",
-    "react-easy-crop": "^5.4.2"
+    "yup": "^1.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
