Implement Stripe payments, wallets, and round workflow

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,4 +22,5 @@ spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=CHAR
 
 stripe.api-key=${STRIPE_API_KEY:}
 stripe.sandbox-id=${STRIPE_SANDBOX_ID:}
+stripe.publishable-key=${STRIPE_PUBLISHABLE_KEY:}
 
