Add Stripe connected account integration and sync

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -24,4 +24,7 @@ spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=CHAR
 stripe.api-key=${STRIPE_API_KEY:}
 stripe.sandbox-id=${STRIPE_SANDBOX_ID:}
 stripe.publishable-key=${STRIPE_PUBLISHABLE_KEY:}
+stripe.connect.account-return-url=${STRIPE_CONNECT_ACCOUNT_RETURN_URL:}
+stripe.connect.account-refresh-url=${STRIPE_CONNECT_ACCOUNT_REFRESH_URL:}
+stripe.sync.cron=${STRIPE_SYNC_CRON:0 0/30 * * * *}
 
