Add default Stripe configuration values

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -21,10 +21,10 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.type.preferred_uuid_jdbc_type=CHAR
 
-stripe.api-key=${STRIPE_API_KEY:}
-stripe.sandbox-id=${STRIPE_SANDBOX_ID:}
-stripe.publishable-key=${STRIPE_PUBLISHABLE_KEY:}
-stripe.connect.account-return-url=${STRIPE_CONNECT_ACCOUNT_RETURN_URL:}
-stripe.connect.account-refresh-url=${STRIPE_CONNECT_ACCOUNT_REFRESH_URL:}
+stripe.api-key=${STRIPE_API_KEY:sk_test_placeholder}
+stripe.sandbox-id=${STRIPE_SANDBOX_ID:sbx_placeholder}
+stripe.publishable-key=${STRIPE_PUBLISHABLE_KEY:pk_test_placeholder}
+stripe.connect.account-return-url=${STRIPE_CONNECT_ACCOUNT_RETURN_URL:https://app.mansa.local/payments/stripe/return}
+stripe.connect.account-refresh-url=${STRIPE_CONNECT_ACCOUNT_REFRESH_URL:https://app.mansa.local/payments/stripe/refresh}
 stripe.sync.cron=${STRIPE_SYNC_CRON:0 0/30 * * * *}
 
